[NAE-2027] Netgrif modules
- added plugins